# sec-cvescan

./: .isort.cfg  pyproject.toml  setup.cfg  setup.py
cvescan/: __main__.py  downloader.py
